# BestBuddysAG

./: .gitmodules  Classification.py  PositionController.py  Progamm.py  README.md  SebsTestFile.py  detector.py  objectDetection.py  scaleDetection.py  scaleDetection2.py  scaleDetection3.py  tracker.py
camera/: package.xml
camera/camera/: camera.py  scaleDetection.py
camera/images/: test.mp4Zone.Identifier
classification/: package.xml  setup.cfg  setup.py
classification/classification/: Classification.py  bayes_model.joblib  logRregretionmodel.joblib  svm_model.joblib  test_classification.py
detection_node/: package.xml  setup.cfg  setup.py
detection_node/detection_node/: detection.py  detection_test.py  test_detection.py  tracker.py
documentation/: docs.config
documentation/html/: annotated.html  classController.html  classcamera_1_1camera_1_1Camera-members.html  classcamera_1_1camera_1_1Camera.html  classcamera_1_1camera_1_1Camera__coll__graph.map  classcamera_1_1camera_1_1Camera__coll__graph.md5  classcamera_1_1camera_1_1Camera__inherit__graph.md5  classclassification_1_1Classification_1_1ObjectClassification-members.html  classclassification_1_1Classification_1_1ObjectClassification.html  classclassification_1_1Classification_1_1ObjectClassification__coll__graph.md5  classclassification_1_1Classification_1_1ObjectClassification__inherit__graph.map  classclassification_1_1Classification_1_1ObjectClassification__inherit__graph.md5  classdetection__node_1_1detection_1_1ObjectDetection-members.html  classdetection__node_1_1detection_1_1ObjectDetection.html  classdetection__node_1_1detection_1_1ObjectDetection__coll__graph.map  classdetection__node_1_1detection_1_1ObjectDetection__coll__graph.md5  classdetection__node_1_1detection_1_1ObjectDetection__inherit__graph.md5  classdetection__node_1_1detection_1_1ObjektDetektion-members.html  classdetection__node_1_1detection_1_1ObjektDetektion.html  classdetection__node_1_1detection_1_1ObjektDetektion__coll__graph.map  classdetection__node_1_1detection_1_1ObjektDetektion__coll__graph.md5  classdetection__node_1_1tracker_1_1EuclideanDistTracker-members.html  classdetection__node_1_1tracker_1_1EuclideanDistTracker.html  classes.html  classimage__preprocessor_1_1preprocessing_1_1Preprocessor-members.html  classimage__preprocessor_1_1preprocessing_1_1Preprocessor.html  classimage__preprocessor_1_1preprocessing_1_1Preprocessor__coll__graph.map  classimage__preprocessor_1_1preprocessing_1_1Preprocessor__coll__graph.md5  classimage__preprocessor_1_1scaleDetection_1_1ScaleDetector-members.html  classimage__preprocessor_1_1scaleDetection_1_1ScaleDetector.html  classlogic_1_1logic_1_1Controller-members.html  classlogic_1_1logic_1_1Controller.html  classlogic_1_1logic_1_1Controller__coll__graph.map  (+47 more)
documentation/latex/: files.tex  (+35 more)
gruppierung/: package.xml  setup.cfg  setup.py
gruppierung/gruppierung/: modellierung.py
image_preprocessor/: package.xml  setup.cfg  setup.py
logic/: package.xml  setup.cfg  setup.py
modeling/: package.xml  setup.cfg  setup.py
portal_robot_interfaces/: CMakeLists.txt  package.xml
position_controller/: package.xml  setup.cfg  setup.py
ro45_portalrobot_interfaces/: CMakeLists.txt  package.xml
ro45_portalrobot_interfaces/msg/: ConCmd.msg  Error.msg  IdClassVec.msg  IdPosTime.msg  IdPosVelTime.msg  PosVelClass.msg
synch_node/: package.xml  setup.cfg  setup.py
(+57 files in other folders)
